Apply docs theme

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-private-methods": "^7.4.4",
     "@baleada/icons": "^0.3.0",
+    "@baleada/logic": "0.0.0",
     "@baleada/vue": "^0.0.2",
     "@nuxtjs/eslint-config": "0.0.1",
     "@nuxtjs/markdownit": "^1.2.4",
     "@nuxtjs/pwa": "^2.6.0",
+    "@u3u/vue-hooks": "^2.0.1",
     "@vue/composition-api": "^0.2.1",
     "autoprefixer": "^8.6.4",
     "babel-eslint": "^10.0.1",
@@ -59,6 +61,7 @@
     "portal-vue": "^2.1.4",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
+    "prismjs": "^1.17.1",
     "tailwindcss": "^1.1.0",
     "typeface-caveat": "0.0.54",
     "typeface-fira-mono": "0.0.72",
