--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "markdown-it": "^9.1.0",
+    "markdown-it-multimd-table": "^3.2.3",
+    "markdown-it-prism": "^2.0.3",
     "nodemon": "^1.18.9",
     "nuxt": "^2.4.0",
     "nuxt-purgecss": "^0.2.1",
@@ -66,6 +68,7 @@
     "typeface-caveat": "0.0.54",
     "typeface-fira-mono": "0.0.72",
     "typeface-fira-sans": "0.0.75",
+    "typeface-inter": "^3.10.0",
     "vue-template-compiler": "^2.6.10",
     "vue-template-es2015-compiler": "^1.9.1"
   }
