--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-nuxt": "^0.4.3",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "front-matter": "^3.0.2",
     "markdown-it": "^9.1.0",
     "markdown-it-multimd-table": "^3.2.3",
     "markdown-it-prism": "^2.0.3",
