Document Navigable, add link to each article in repo

--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -71,6 +71,11 @@
         "title": "Completable",
         "framework": "agnostic",
         "href": "/docs/logic/libraries/Completable"
+      },
+      {
+        "title": "Navigable",
+        "framework": "agnostic",
+        "href": "/docs/logic/libraries/Navigable"
       }
     ]
   },
