Add api design specs for subclass state and methods. Change Syncable to Editable

--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -78,14 +78,14 @@
         "href": "/docs/logic/classes/Completable"
       },
       {
+        "title": "Editable",
+        "framework": "agnostic",
+        "href": "/docs/logic/classes/Editable"
+      },
+      {
         "title": "Navigable",
         "framework": "agnostic",
         "href": "/docs/logic/classes/Navigable"
-      },
-      {
-        "title": "Syncable",
-        "framework": "agnostic",
-        "href": "/docs/logic/classes/Syncable"
       }
     ]
   },
