--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -54,6 +54,11 @@
   },
   {
     "level": 1,
+    "name": "loader",
+    "pages": []
+  },
+  {
+    "level": 1,
     "name": "logic",
     "pages": [
       {
