--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@babel/plugin-proposal-private-methods": "^7.4.4",
     "@baleada/composition": "^0.3.3",
     "@baleada/icons": "^0.3.1",
+    "@baleada/listenable-gestures": "0.0.4",
     "@baleada/loader": "0.0.1",
-    "@baleada/logic": "^0.7.1",
+    "@baleada/logic": "^0.8.1",
     "@baleada/markdown-it-prose-container": "^0.3.3",
     "@baleada/markdown-it-spa-links": "^0.1.0",
     "@baleada/markdown-to-prose": "^0.3.1",
