--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@baleada/composition": "^0.4.0",
     "@baleada/icons": "^0.3.1",
     "@baleada/listenable-gestures": "^0.3.0",
-    "@baleada/loader": "0.0.1",
+    "@baleada/loader": "^0.1.0",
     "@baleada/logic": "^0.11.9",
     "@baleada/markdown-it-prose-container": "^0.4.0",
     "@baleada/markdown-it-spa-links": "^0.1.0",
