--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@baleada/composition": "^0.4.0",
     "@baleada/icons": "^0.3.1",
     "@baleada/listenable-gestures": "^0.3.0",
-    "@baleada/loader": "^0.1.0",
     "@baleada/logic": "^0.11.9",
     "@baleada/markdown-it-prose-container": "^0.4.0",
     "@baleada/markdown-it-spa-links": "^0.1.0",
     "@baleada/markdown-to-prose": "^0.3.2",
     "@baleada/prose": "^0.6.5",
+    "@baleada/source-transform": "^0.2.2",
     "@nuxtjs/eslint-config": "0.0.1",
     "@nuxtjs/markdownit": "^1.2.4",
     "@nuxtjs/pwa": "^2.6.0",
