--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -5,17 +5,14 @@
     "pages": [
       {
         "title": "What is Baleada?",
-        "framework": "agnostic",
         "href": "/docs"
       },
       {
         "title": "Types of tools",
-        "framework": "agnostic",
         "href": "/docs/types-of-tools"
       },
       {
         "title": "Roadmap",
-        "framework": "agnostic",
         "href": "/docs/roadmap"
       }
     ]
@@ -26,7 +23,6 @@
     "pages": [
       {
         "title": "What is Baleada Composition?",
-        "framework": "agnostic",
         "href": "/docs/composition"
       }
     ]
@@ -42,17 +38,14 @@
     "pages": [
       {
         "title": "What is Baleada Icons?",
-        "framework": "agnostic",
         "href": "/docs/icons"
       },
       {
         "title": "Using with React",
-        "framework": "React",
         "href": "/docs/icons/using-with-react"
       },
       {
         "title": "Using with Vue",
-        "framework": "Vue",
         "href": "/docs/icons/using-with-vue"
       }
     ]
@@ -68,17 +61,14 @@
     "pages": [
       {
         "title": "What is Baleada Logic?",
-        "framework": "agnostic",
         "href": "/docs/logic"
       },
       {
         "title": "Identifying UI logic",
-        "framework": "agnostic",
         "href": "/docs/logic/identifying-ui-logic"
       },
       {
         "title": "API design",
-        "framework": "agnostic",
         "href": "/docs/logic/api-design"
       }
     ]
@@ -89,47 +79,38 @@
     "pages": [
       {
         "title": "Animateable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Animateable"
       },
       {
         "title": "Completeable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Completeable"
       },
       {
         "title": "Copyable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Copyable"
       },
       {
         "title": "Delayable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Delayable"
       },
       {
         "title": "Fetchable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Fetchable"
       },
       {
         "title": "Listenable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Listenable"
       },
       {
         "title": "Navigateable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Navigateable"
       },
       {
         "title": "Recognizeable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Recognizeable"
       },
       {
         "title": "Searchable",
-        "framework": "agnostic",
         "href": "/docs/logic/classes/Searchable"
       }
     ]
@@ -146,19 +127,13 @@
   },
   {
     "level": 1,
-    "name": "markdown-it spa links",
+    "name": "prose",
     "pages": [
       {
-        "title": "What is Baleada Markdown-it SPA Links?",
-        "framework": "agnostic",
-        "href": "/docs/markdown-it-spa-links"
+        "title": "What is Baleada Prose?",
+        "href": "/docs/prose"
       }
     ]
-  },
-  {
-    "level": 1,
-    "name": "prose",
-    "pages": []
   },
   {
     "level": 1,
@@ -166,18 +141,25 @@
     "pages": [
       {
         "title": "What is Baleada Source Transform?",
-        "framework": "agnostic",
         "href": "/docs/source-transform"
       },
       {
         "title": "Using with Rollup",
-        "framework": "agnostic",
         "href": "/docs/source-transform/using-with-rollup"
       },
       {
         "title": "Using with Webpack",
-        "framework": "agnostic",
         "href": "/docs/source-transform/using-with-webpack"
+      }
+    ]
+  },
+  {
+    "level": 1,
+    "name": "spa links",
+    "pages": [
+      {
+        "title": "What is Baleada SPA Links?",
+        "href": "/docs/spa-links"
       }
     ]
   },
@@ -187,17 +169,14 @@
     "pages": [
       {
         "title": "What is Baleada Tailwind Linear?",
-        "framework": "agnostic",
         "href": "/docs/tailwind-linear"
       },
       {
         "title": "Class References",
-        "framework": "agnostic",
         "href": "/docs/tailwind-linear/class-references"
       },
       {
         "title": "Default Config",
-        "framework": "agnostic",
         "href": "/docs/tailwind-linear/default-config"
       }
     ]
