Add prose articles, upgrade to prose-container

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@baleada/icons": "^0.3.1",
     "@baleada/listenable-gestures": "^0.3.0",
     "@baleada/logic": "^0.11.9",
-    "@baleada/markdown-it-prose-container": "^0.4.0",
-    "@baleada/markdown-to-prose": "^0.3.2",
+    "@baleada/markdown-to-prose": "^0.3.3",
     "@baleada/prose": "^0.6.5",
+    "@baleada/prose-container": "^0.5.2",
     "@baleada/source-transform": "^0.3.0",
     "@baleada/spa-links": "^0.3.1",
     "@nuxtjs/eslint-config": "0.0.1",
