document details and add details styles

--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -166,6 +166,10 @@
         "href": "/docs/prose/components/blockquote"
       },
       {
+        "title": "ProseDetails",
+        "href": "/docs/prose/components/details"
+      },
+      {
         "title": "ProseSection",
         "href": "/docs/prose/components/section"
       }
