--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -52,6 +52,57 @@
   },
   {
     "level": 1,
+    "name": "interface",
+    "pages": []
+  },
+  {
+    "level": 2,
+    "name": "components",
+    "pages": [
+      {
+        "title": "ProseArticle",
+        "href": "/docs/prose/components/article"
+      },
+      {
+        "title": "ProseAside",
+        "href": "/docs/prose/components/aside"
+      },
+      {
+        "title": "ProseBlockquote",
+        "href": "/docs/prose/components/blockquote"
+      },
+      {
+        "title": "ProseCodeblock",
+        "href": "/docs/prose/components/codeblock"
+      },
+      {
+        "title": "ProseDetails",
+        "href": "/docs/prose/components/details"
+      },
+      {
+        "title": "ProseGrid",
+        "href": "/docs/prose/components/grid"
+      },
+      {
+        "title": "ProseHeading",
+        "href": "/docs/prose/components/heading"
+      },
+      {
+        "title": "ProseLayout",
+        "href": "/docs/prose/components/layout"
+      },
+      {
+        "title": "ProseList",
+        "href": "/docs/prose/components/list"
+      },
+      {
+        "title": "ProseSection",
+        "href": "/docs/prose/components/section"
+      }
+    ]
+  },
+  {
+    "level": 1,
     "name": "linear numeric",
     "pages": [
       {
