--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-private-methods": "^7.4.4",
-    "@baleada/composition": "^0.4.0",
-    "@baleada/icons": "^0.3.1",
+    "@baleada/composition-vue": "^0.5.1",
+    "@baleada/icons-vue": "^0.5.0",
+    "@baleada/interface-vue": "^0.1.0",
     "@baleada/listenable-gestures": "^0.4.2",
-    "@baleada/logic": "^0.11.14",
-    "@baleada/markdown-to-prose": "^0.3.3",
-    "@baleada/prose": "^0.6.8",
+    "@baleada/logic": "^0.12.0",
+    "@baleada/markdown-to-prose": "^0.4.0",
     "@baleada/prose-container": "^0.5.3",
+    "@baleada/prose-vue": "^0.7.2",
     "@baleada/source-transform": "^0.3.0",
     "@baleada/spa-links": "^0.3.1",
     "@nuxtjs/eslint-config": "0.0.1",
