document composition-vue

--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -24,6 +24,10 @@
       {
         "title": "What is Baleada Composition?",
         "href": "/docs/composition"
+      },
+      {
+        "title": "Using Baleada Composition with Vue",
+        "href": "/docs/composition/using-with-vue"
       }
     ]
   },
