--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-private-methods": "^7.4.4",
-    "@baleada/composition-vue": "^0.5.2",
-    "@baleada/icons-vue": "^0.5.0",
-    "@baleada/interface-vue": "^0.1.1",
     "@baleada/listenable-gestures": "^0.4.2",
-    "@baleada/logic": "^0.13.1",
-    "@baleada/markdown-to-prose": "^0.4.0",
-    "@baleada/prose-container": "^0.5.4",
-    "@baleada/prose-vue": "^0.7.2",
-    "@baleada/source-transform": "^0.3.0",
-    "@baleada/spa-links": "^0.3.1",
+    "@baleada/logic": "^0.15.7",
+    "@baleada/markdown-it-prose-container": "^0.6.0",
+    "@baleada/markdown-it-spa-links": "^0.5.0",
+    "@baleada/markdown-to-prose": "^0.5.9",
+    "@baleada/tailwind-linear-numeric": "^0.8.6",
+    "@baleada/tailwind-theme": "^0.1.5",
+    "@baleada/tailwind-theme-utils": "^0.4.1",
+    "@baleada/vue-composition": "^0.6.0",
+    "@baleada/vue-icons": "^0.6.0",
+    "@baleada/vue-interface": "^0.3.0",
+    "@baleada/vue-prose": "^0.8.0",
+    "@baleada/webpack-source-transform": "^0.4.0",
     "@nuxtjs/eslint-config": "0.0.1",
     "@nuxtjs/markdownit": "^1.2.4",
     "@nuxtjs/pwa": "^2.6.0",
@@ -63,7 +66,7 @@
     "postcss-nested": "^4.1.2",
     "refractor": "^2.10.0",
     "rehype": "^9.0.1",
-    "tailwindcss": "^1.1.0",
+    "tailwindcss": "^1.2.0",
     "toml": "^3.0.0",
     "typeface-caveat": "0.0.54",
     "typeface-fira-mono": "0.0.72",
