fix some dependency stuff and document theme utils

--- a/static/json/manifest.json
+++ b/static/json/manifest.json
@@ -156,6 +156,30 @@
       {
         "title": "taps",
         "href": "/docs/listenable-gestures/functions/taps"
+      },
+      {
+        "title": "fractions",
+        "href": "/docs/theme-utils/functions/fractions"
+      },
+      {
+        "title": "px",
+        "href": "/docs/theme-utils/functions/px"
+      },
+      {
+        "title": "rem",
+        "href": "/docs/theme-utils/functions/rem"
+      },
+      {
+        "title": "screen",
+        "href": "/docs/theme-utils/functions/screen"
+      },
+      {
+        "title": "withoutColorPalettes",
+        "href": "/docs/theme-utils/functions/withoutColorPalettes"
+      },
+      {
+        "title": "withoutTailwindFractions",
+        "href": "/docs/theme-utils/functions/withoutTailwindFractions"
       }
     ]
   },
@@ -436,6 +460,65 @@
   {
     "level": 1,
     "name": "theme utils",
-    "pages": []
+    "pages": [
+      {
+        "title": "What is Baleada Theme Utils?",
+        "href": "/docs/theme-utils"
+      }
+    ]
+  },
+  {
+    "level": 2,
+    "name": "functions",
+    "pages": [
+      {
+        "title": "clicks",
+        "href": "/docs/listenable-gestures/functions/clicks"
+      },
+      {
+        "title": "drag",
+        "href": "/docs/listenable-gestures/functions/drag"
+      },
+      {
+        "title": "dragdrop",
+        "href": "/docs/listenable-gestures/functions/dragdrop"
+      },
+      {
+        "title": "pan",
+        "href": "/docs/listenable-gestures/functions/pan"
+      },
+      {
+        "title": "swipe",
+        "href": "/docs/listenable-gestures/functions/swipe"
+      },
+      {
+        "title": "taps",
+        "href": "/docs/listenable-gestures/functions/taps"
+      },
+      {
+        "title": "fractions",
+        "href": "/docs/theme-utils/functions/fractions"
+      },
+      {
+        "title": "px",
+        "href": "/docs/theme-utils/functions/px"
+      },
+      {
+        "title": "rem",
+        "href": "/docs/theme-utils/functions/rem"
+      },
+      {
+        "title": "screen",
+        "href": "/docs/theme-utils/functions/screen"
+      },
+      {
+        "title": "withoutColorPalettes",
+        "href": "/docs/theme-utils/functions/withoutColorPalettes"
+      },
+      {
+        "title": "withoutTailwindFractions",
+        "href": "/docs/theme-utils/functions/withoutTailwindFractions"
+      }
+    ]
   }
 ]
